--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -75,89 +75,91 @@ Chosen ciphertext security is a solved problem within the context of symmetric c
 \subsection{Our contributions}\label{sec:our-contributions}
 Our contributions are as follows:
 
-\subsubsection{Generic CCA secure KEM transformation.} We propose the ``encrypt-then-MAC'' KEM transformation. Our transformation constructs a KEM with provable CCA security under the random oracle model using a public-key encryption scheme (PKE) with one-wayness under plaintext-checking attack and a message authentication code with existential unforgeability. Compared to the Fujisaki-Okamoto transformation, which is widely adopted by many KEM candidates in NIST's Post Quantum Cryptography (PQC) standardization project, our transformation replaces \textit{de-randomization} (which might degrade the security of a randomized cryptosystem) and \textit{re-encryption} (which is computationally inefficient and introduces additional risk of side channels) with computing MAC tag. We also provided concrete cryptanalysis on possible real-world attacks.
+\subsubsection{Generic CCA secure KEM transformation.} We propose the encrypt-then-MAC KEM transformation. Our transformation constructs a KEM with provable CCA security under the random oracle model using a public-key encryption scheme (PKE) with one-wayness under plaintext-checking attack and a message authentication code with existential unforgeability. Compared to the Fujisaki-Okamoto transformation, which is widely adopted by many KEM candidates in NIST's Post Quantum Cryptography (PQC) standardization project, our transformation replaces \textit{de-randomization} (which might degrade the security of a randomized cryptosystem) and \textit{re-encryption} (which is computationally inefficient and introduces additional risk of side channels) with computing MAC tag.
 
-\subsubsection{Instantiation with McEliece cryptosystem.} We applied our KEM transformation to the McEliece cryptosystem instantiated with binary Goppa code and surveyed the landscape of plaintext-checking attacks against Classic McEliece. We implemented this instantiation in C and benchmarked its performance. Compared to the reference implementation of Classic McEliece, our scheme achieves comparable performance.
+\subsubsection{Instantiation with Classic McEliece.} We present McElieceEtM, a KEM constructed from applying the encrypt-then-MAC transformation to the CPA subroutines of Classic McEliece. We conjecture McElieceEtM to be IND-CCA secure as there is currently no known plaintext-checking attack against Classic McEliece. We implemented McElieceEtM by adapting the reference C implementation, which achieved 9-12\% percent speed up in throughput (enc + dec).
+
+\subsubsection{Generalizing DHIES.} We demonstrate that the encrypt-then-MAC KEM transformation is a generalization of DHIES \cite{DBLP:conf/ctrsa/AbdallaBR01,DBLP:journals/iacr/AbdallaBR99}, a well-known CCA secure hybrid public-key encryption scheme. Specifically, we prove that the Gap Diffie-Hellman assumption, which is used to prove the CCA security of DHIES, implies one-wayness under plaintext checking attack (OW-PCA) of the ElGamal cryptosystem.
 
 % \subsubsection{Instantiation with ElGamal and McEliece cryptosystem.} We applied our KEM transformation to the ElGamal cryptosystem and the McEliece cryptosystems. We demonstrate that the ``encrypt-then-MAC'' KEM transformation is a generalization of DHIES by showing that the Gap Diffie-Hellman assumption is a special case of one-way security under plaintext checking attacks. We also surveyed plaintext checking attacks against many post quantum KEM candidates in the PQC standardizaton project.
 
-% \subsubsection{C implementation of McEliece+.} We implemented McEliece+ in C and benchmarked its performance. Compared to the reference implementation of Classic McEliece (which uses re-encryption), McEliece+ achieves significant decapsulation speedup at some minimal cost of encapsulation overhead, which results in 9-12\% increase in throughput (encapsulation + decapsulation time).
+% \subsubsection{C implementation of McElieceEtM.} We implemented McElieceEtM in C and benchmarked its performance. Compared to the reference implementation of Classic McEliece (which uses re-encryption), McElieceEtm achieves significant decapsulation speedup at some minimal cost of encapsulation overhead, which results in 9-12\% increase in throughput (encapsulation + decapsulation time).
 
 \subsection{Related works}\label{sec:related-works}
 \subsubsection{OAEP}
 \textit{Optimal Asymmetric Encryption Padding (OAEP)} \cite{DBLP:conf/eurocrypt/BellareR94}, proposed by Mihir Bellare and Phillip Rogaway in 1994, was one of the earliest provably secure CCA transformations. However, Victor Shoup identified a non-trivial gap in OAEP's security proof that cannot be filled under ROM\cite{DBLP:conf/crypto/Shoup01}, although Fujisaki et al. later proved that RSA-OAEP is secure under the RSA assumption \cite{DBLP:conf/crypto/FujisakiOPS01}. RSA-OAEP is widely used in secure communication protocols such as TLS 1.2. The main drawback of OAEP is that it requires its input to be an one-way trapdoor permutation, which is difficult to find. To this day, RSA remains the only viable candidate to apply OAEP to.
 
-\subsubsection{REACT/GEM} Okamoto and Pointchval proposed REACT \cite{DBLP:conf/ctrsa/OkamotoP01} (Figure \ref{fig:react}) in 2001, followed by GEM \cite{DBLP:conf/ctrsa/CoronHJPPT02} in 2002. Both are generic CCA transformation with security proved under ROM. Okamoto and Pointcheval first defined the security notion of one-wayness under plaintext checking attack (OW-PCA) and reduced the CCA security of the transformation to the OW-PCA security of the input public-key cryptosystem.
+\subsubsection{REACT/GEM} Okamoto and Pointchval proposed REACT \cite{DBLP:conf/ctrsa/OkamotoP01} in 2001, followed by GEM \cite{DBLP:conf/ctrsa/CoronHJPPT02} in 2002. Both are generic CCA transformation with security proved under ROM. Okamoto and Pointcheval first defined the security notion of one-wayness under plaintext checking attack (OW-PCA) and reduced the CCA security of the transformation to the OW-PCA security of the input public-key cryptosystem.
 
-\begin{figure}[h]
-    \centering
-    \begin{minipage}[t]{0.45\textwidth}
-        \begin{algorithm}[H]
-            \caption*{$\encrypt_\text{REACT}(\pk, m)$}
-            \begin{algorithmic}[1]
-                \State $w \leftarrow \mathcal{M}_\pke$
-                \State $c_1 \leftarrow \encrypt(\pk, w)$
-                \State $k \leftarrow G(w)$
-                \State $c_2 \leftarrow \mathcal{E}_k(m)$
-                \State $c_3 \leftarrow H(w, m, c_1, c_2)$
-                \State \Return $(c_1, c_2, c_3)$
-            \end{algorithmic}
-        \end{algorithm}
-    \end{minipage}\hfill
-    \begin{minipage}[t]{0.45\textwidth}
-        \begin{algorithm}[H]
-            \caption*{$\decrypt_\text{REACT}(\sk, c)$}
-            \begin{algorithmic}[1]
-                \Require $c = (c_1, c_2, c_3)$
-                \State $\hat{w} \leftarrow \decrypt(\sk, c_1)$
-                \State $\hat{k} \leftarrow G(\hat{w})$
-                \State $\hat{m} \leftarrow \mathcal{D}_{\hat{k}}(c_2)$
-                \If{$H(\hat{w}, \hat{m}, c_1, c_2) = c_3$}
-                    \State \Return $\hat{m}$
-                \Else
-                    \State \Return $\bot$
-                \EndIf
-            \end{algorithmic}
-        \end{algorithm}
-    \end{minipage}
-    \caption{Given PKE $(\keygen, \encrypt, \decrypt)$, SKE $(\mathcal{E}, \mathcal{D})$, and hash functions $G, H$, REACT constructs a hybrid PKE $(\keygen_\text{REACT}, \encrypt_\text{REACT}, \decrypt_\text{REACT})$}\label{fig:react}
-\end{figure}
+% \begin{figure}[h]
+%     \centering
+%     \begin{minipage}[t]{0.45\textwidth}
+%         \begin{algorithm}[H]
+%             \caption*{$\encrypt_\text{REACT}(\pk, m)$}
+%             \begin{algorithmic}[1]
+%                 \State $w \leftarrow \mathcal{M}_\pke$
+%                 \State $c_1 \leftarrow \encrypt(\pk, w)$
+%                 \State $k \leftarrow G(w)$
+%                 \State $c_2 \leftarrow \mathcal{E}_k(m)$
+%                 \State $c_3 \leftarrow H(w, m, c_1, c_2)$
+%                 \State \Return $(c_1, c_2, c_3)$
+%             \end{algorithmic}
+%         \end{algorithm}
+%     \end{minipage}\hfill
+%     \begin{minipage}[t]{0.45\textwidth}
+%         \begin{algorithm}[H]
+%             \caption*{$\decrypt_\text{REACT}(\sk, c)$}
+%             \begin{algorithmic}[1]
+%                 \Require $c = (c_1, c_2, c_3)$
+%                 \State $\hat{w} \leftarrow \decrypt(\sk, c_1)$
+%                 \State $\hat{k} \leftarrow G(\hat{w})$
+%                 \State $\hat{m} \leftarrow \mathcal{D}_{\hat{k}}(c_2)$
+%                 \If{$H(\hat{w}, \hat{m}, c_1, c_2) = c_3$}
+%                     \State \Return $\hat{m}$
+%                 \Else
+%                     \State \Return $\bot$
+%                 \EndIf
+%             \end{algorithmic}
+%         \end{algorithm}
+%     \end{minipage}
+%     \caption{Given PKE $(\keygen, \encrypt, \decrypt)$, SKE $(\mathcal{E}, \mathcal{D})$, and hash functions $G, H$, REACT constructs a hybrid PKE $(\keygen_\text{REACT}, \encrypt_\text{REACT}, \decrypt_\text{REACT})$}\label{fig:react}
+% \end{figure}
 
-\begin{figure}[h]
-    \centering
-    \begin{minipage}[t]{0.45\textwidth}
-        \begin{algorithm}[H]
-            \caption*{$\encrypt_\text{GEM}(\pk, m)$}
-            \begin{algorithmic}[1]
-                \State $r \leftarrow \mathcal{R}$
-                \State $s \leftarrow F(m, r)$
-                \State $w \leftarrow s \Vert (r \oplus H(s))$
-                \State $c_1 \leftarrow \encrypt(\pk, w)$
-                \State $k \leftarrow G(w, c_1)$
-                \State $c_2 \leftarrow \mathcal{E}_k(m)$
-                \State \Return $(c_1, c_2)$
-            \end{algorithmic}
-        \end{algorithm}
-    \end{minipage}
-    \begin{minipage}[t]{0.45\textwidth}
-        \begin{algorithm}[H]
-            \caption*{$\decrypt_\text{GEM}(\sk, c)$}
-            \begin{algorithmic}[1]
-                \Require $(c_1, c_2) \leftarrow c$
-                \State $\hat{w} \leftarrow \decrypt(\sk, c_1)$
-                \State $(\hat{s}, \hat{t}) \leftarrow \hat{w}$
-                \State $\hat{r} \leftarrow \hat{t}\oplus H(\hat{s})$
-                \State $\hat{k} \leftarrow G(\hat{w}, c_1)$
-                \State $\hat{m} \leftarrow \mathcal{D}_{\hat{k}}(c_2)$
-                \If{$F(\hat{m}, \hat{r}) = \hat{s}$}
-                    \State \Return $\hat{m}$
-                \Else \State \Return $\bot$
-                \EndIf
-            \end{algorithmic}
-        \end{algorithm}
-    \end{minipage}
-    \caption{Given PKE $(\keygen, \encrypt, \decrypt)$, SKE $(\mathcal{E}, \mathcal{D})$, and hash functions $F, G, H$, GEM constructs a hybrid PKE $(\keygen_\text{GEM}, \encrypt_\text{GEM}, \decrypt_\text{GEM})$}\label{fig:gem}
-\end{figure}
+% \begin{figure}[h]
+%     \centering
+%     \begin{minipage}[t]{0.45\textwidth}
+%         \begin{algorithm}[H]
+%             \caption*{$\encrypt_\text{GEM}(\pk, m)$}
+%             \begin{algorithmic}[1]
+%                 \State $r \leftarrow \mathcal{R}$
+%                 \State $s \leftarrow F(m, r)$
+%                 \State $w \leftarrow s \Vert (r \oplus H(s))$
+%                 \State $c_1 \leftarrow \encrypt(\pk, w)$
+%                 \State $k \leftarrow G(w, c_1)$
+%                 \State $c_2 \leftarrow \mathcal{E}_k(m)$
+%                 \State \Return $(c_1, c_2)$
+%             \end{algorithmic}
+%         \end{algorithm}
+%     \end{minipage}
+%     \begin{minipage}[t]{0.45\textwidth}
+%         \begin{algorithm}[H]
+%             \caption*{$\decrypt_\text{GEM}(\sk, c)$}
+%             \begin{algorithmic}[1]
+%                 \Require $(c_1, c_2) \leftarrow c$
+%                 \State $\hat{w} \leftarrow \decrypt(\sk, c_1)$
+%                 \State $(\hat{s}, \hat{t}) \leftarrow \hat{w}$
+%                 \State $\hat{r} \leftarrow \hat{t}\oplus H(\hat{s})$
+%                 \State $\hat{k} \leftarrow G(\hat{w}, c_1)$
+%                 \State $\hat{m} \leftarrow \mathcal{D}_{\hat{k}}(c_2)$
+%                 \If{$F(\hat{m}, \hat{r}) = \hat{s}$}
+%                     \State \Return $\hat{m}$
+%                 \Else \State \Return $\bot$
+%                 \EndIf
+%             \end{algorithmic}
+%         \end{algorithm}
+%     \end{minipage}
+%     \caption{Given PKE $(\keygen, \encrypt, \decrypt)$, SKE $(\mathcal{E}, \mathcal{D})$, and hash functions $F, G, H$, GEM constructs a hybrid PKE $(\keygen_\text{GEM}, \encrypt_\text{GEM}, \decrypt_\text{GEM})$}\label{fig:gem}
+% \end{figure}
 
 \subsubsection{Fujisaki-Okamoto transformation}
 Fujisaki and Okamoto proposed to construct CCA secure hybrid PKE by combining a OW-CPA secure PKE and a semantically secure symmetric-key encryption (SKE) scheme \cite{DBLP:conf/crypto/FujisakiO99}. The main techniques, namely \textit{de-randomization} and \textit{re-encrytion} were both introduced in the original proposal. Under ROM, Fujisaki and Okamoto reduced the CCA security of the hybrid PKE tightly to the semantic security of the input SKE and \textit{non-tightly} to the OW-CPA security of the input PKE (with loss factor $q$, the number of hash oracle queries). Later works extended the original proposal to build CCA secure KEM: KEM's security model makes building secure KEM simpler than building secure PKE, and it is well-known that combining a CCA secure KEM with a CCA secure data encapsulation mechanism (DEM), such as some authenticated encryption scheme (e.g. AES-GCM, AES-CCM, ChaCha20-Poly1305), results in a CCA secure hybrid PKE \cite{DBLP:journals/iacr/Shoup01,DBLP:conf/eurocrypt/Shoup00a}. Further studies \cite{DBLP:conf/ima/Dent03,DBLP:conf/tcc/HofheinzHK17,DBLP:journals/iacr/BernsteinP18,DBLP:conf/asiacrypt/HovelmannsHM22,DBLP:conf/pqcrypto/XagawaY19,DBLP:conf/crypto/JiangZCWM18} gave tighter security bounds, accounted for decryption failures in the underlying PKE, and analyzed the security under quantum random oracle model (QROM). To this day, the Fujisaki-Okamoto transformation is the only known generic CCA secure transformation that can convert OW-CPA/IND-CPA PKE into a CCA secure KEM. Because of the minimal input requirement and the simple construction, the Fujisaki-Okamoto transformation was widely adopted among post-quantum KEM candidates submitted to the PQC standardization project, including Kyber \cite{DBLP:conf/eurosp/BosDKLLSSSS18}, Saber \cite{DBLP:conf/africacrypt/DAnversKRV18}, FrodoKEM \cite{DBLP:conf/ccs/BosCDMNNRS16}, and Classic McEliece \cite{DBLP:conf/ches/BernsteinCS13}.
@@ -169,17 +171,19 @@ Despite its widespread adoption, the Fujisaki-Okamoto transformation has many fl
 \end{itemize}
 
 \subsection{Paper organization}\label{sec:paper-organization}
-In Section \ref{sec:preliminaries}, we review the preliminary definitions and theorems. In Section \ref{sec:the-enc-then-mac-transformation}, we present the encrypt-then-MAC KEM transformation, proves its CCA security, and discusses practical attacks. In Section \ref{sec:application-to-mceliece}, we present McEliece+, an instantiation of the encrypt-then-MAC transformation, benchmark, and compare the performance of McEliece+ with Classic McEliece. In Section \ref{sec:application-to-elgamal}, we show that the encrypt-then-MAC transformation is a generalization of DHIES. 
+In Section \ref{sec:preliminaries}, we review the preliminary definitions and theorems. In Section \ref{sec:the-enc-then-mac-transformation}, we present the encrypt-then-MAC KEM transformation, proves its CCA security, and discusses practical attacks. In Section \ref{sec:application-to-mceliece}, we present McElieceEtM, an instantiation of the encrypt-then-MAC transformation using subroutines from Classic McEliece. In Section \ref{sec:application-to-elgamal}, we show that the encrypt-then-MAC transformation is a generalization of DHIES. 
 
 \section{Preliminaries}\label{sec:preliminaries}
+\subsubsection{Notations.} For finite set $S$, we use $x \leftsample S$ to denote uniformly random sample from the set. For deterministic routine $f$, we use $x \leftarrow f()$ to denote assigning the output of $f$ to $x$. For randomized routine $g$, we use $x \leftsample g()$ to denote assigning the randomized output of $g$ to $x$. For boolean statement $B$, we denote $\llbrack B \rrbrack$ to be $1$ if $B$ is true and $0$ otherwise. For probabilistic Turing machine $A$, we denote access to oracle $\mathcal{O}$ by $A^\mathcal{O}$. We sometimes model hash function $H$ as a random oracle, in which case we will use $\mathcal{L}^H$ to denote the record of input-output queries $(x, H(x))$ made to the oracle.
+
 \subsection{Public-key encryption scheme}
-\subsubsection{Syntax} A public-key encryption scheme (PKE) is a collection fo three routines $(\keygen, \encrypt, \decrypt)$ defined over some plaintext space $\mathcal{M}$ and some ciphertext space $\mathcal{C}$. Key generation $(\pk, \sk) \leftarrow \keygen(1^\lambda)$ is a randomized routine that returns a keypair consisting of a public encryption key and a secret decryption key. The encryption routine $\encrypt: (\pk, m) \mapsto c$ encrypts the input plaintext $m$ under the input public key $\pk$ and produces a ciphertext $c$. The decryption routine $\decrypt: (\sk, c) \mapsto m$ decrypts the input ciphertext $c$ under the input secret key and produces the corresponding plaintext. Where the encryption routine is randomized, we denote the randomness by a coin $r \in \mathcal{R}$ where $\mathcal{R}$ is called the coin space. Decryption routines are assumed to always be deterministic.
+\subsubsection{Syntax} A public-key encryption scheme (PKE) is a collection fo three routines $(\keygen, \encrypt, \decrypt)$ defined over some plaintext space $\mathcal{M}$ and some ciphertext space $\mathcal{C}$. Key generation $(\pk, \sk) \leftsample \keygen(1^\lambda)$ is a randomized routine that returns a keypair consisting of a public encryption key and a secret decryption key. The encryption routine $\encrypt: (\pk, m) \mapsto c$ encrypts the input plaintext $m$ under the input public key $\pk$ and produces a ciphertext $c$. The decryption routine $\decrypt: (\sk, c) \mapsto m$ decrypts the input ciphertext $c$ under the input secret key and produces the corresponding plaintext. Where the encryption routine is randomized, we denote the randomness by a coin $r \in \mathcal{R}$ where $\mathcal{R}$ is called the coin space. Decryption routines are assumed to always be deterministic.
 
 \subsubsection{Correctness} A PKE is $\delta$-correct if
 
 \begin{equation*}
     E\left[\max_{m\in\mathcal{M}}
-        P\left[ \decrypt(\sk, c) \neq m \mid c \leftarrow \encrypt(\pk, m)\right]
+        P\left[ \decrypt(\sk, c) \neq m \mid c \leftsample \encrypt(\pk, m)\right]
     \right] \leq \delta
 \end{equation*}
 
@@ -193,10 +197,10 @@ Where the expectation is taken with respect to the probability distribution of a
     \begin{algorithm}[H]
         \caption*{OW-ATK game}
         \begin{algorithmic}[1]
-            \State $(\pk, \sk) \leftarrow \keygen(1^\lambda)$
-            \State $m^\ast \leftarrow \mathcal{M}$
-            \State $c^\ast \leftarrow \encrypt(\pk, m)$
-            \State $\hat{m} \leftarrow A^\text{ATK}(1^\lambda, \pk, c^\ast)$
+            \State $(\pk, \sk) \leftsample \keygen(1^\lambda)$
+            \State $m^\ast \leftsample \mathcal{M}$
+            \State $c^\ast \leftsample \encrypt(\pk, m)$
+            \State $\hat{m} \leftsample A^\text{ATK}(1^\lambda, \pk, c^\ast)$
             \State \Return $\llbrack \hat{m} = m^\ast \rrbrack$
         \end{algorithmic}
     \end{algorithm}
@@ -212,11 +216,11 @@ The advantage of an adversary is its probability of producing the correct decryp
         \begin{algorithm}[H]
             \caption*{IND-ATK game}
             \begin{algorithmic}[1]
-                \State $(\pk, \sk) \leftarrow \keygen(1^\lambda)$
-                \State $(m_0, m_1) \leftarrow A^\text{ATK}(1^\lambda, \pk)$
-                \State $b \leftarrow \{0,1\}$
-                \State $c^\ast \leftarrow \encrypt(\pk, m_b)$
-                \State $\hat{b} \leftarrow A^\text{ATK}(1^\lambda, \pk, c^\ast)$
+                \State $(\pk, \sk) \leftsample \keygen(1^\lambda)$
+                \State $(m_0, m_1) \leftsample A^\text{ATK}(1^\lambda, \pk)$
+                \State $b \leftsample \{0,1\}$
+                \State $c^\ast \leftsample \encrypt(\pk, m_b)$
+                \State $\hat{b} \leftsample A^\text{ATK}(1^\lambda, \pk, c^\ast)$
                 \State \Return $\llbrack \hat{b} = b \rrbrack$
             \end{algorithmic}
         \end{algorithm}
@@ -226,7 +230,28 @@ The advantage of an adversary is its probability of producing the correct decryp
 
 In the IND-ATK game (Figure \ref{fig:pke-ind-atk-game}), the adversary chooses two distinct messages and receives the encryption of one of them, randomly selected by the challenger. The advantage of an adversary is its probability of correctly distinguishing the ciphertext of one message from the other beyond blind guess: $\text{Adv}^\text{IND-ATK}_\pke(A) = \vert P[\hat{b} = b] - \frac{1}{2}\vert$. A PKE is said to be IND-ATK secure if no efficient adversary can win the IND-ATK game with non-negligible advantage.
 
-In public-key cryptography, all adversaries are assumed to have access to the public key ($\text{ATK} = \text{CPA}$). If the adversary has access to a decryption oracle $\mathcal{O}^\decrypt: c \mapsto \decrypt(\sk, c)$, it is said to mount chosen-ciphertext attack (ATK = CCA). If the adversary has access to a plaintext-checking oracle (PCO) $\mathcal{O}^\pco: (m, c) \mapsto \llbrack m = \decrypt(\sk, c)\rrbrack$, then it is said to mount plaintext-checking attack (ATK = PCA).
+\begin{figure}[h]
+    \centering
+    \begin{minipage}[t]{0.4\textwidth}
+        \begin{algorithm}[H]
+            \caption*{$\mathcal{O}^\decrypt(c)$}
+            \begin{algorithmic}[1]
+                \State \Return $\decrypt(\sk, c)$
+            \end{algorithmic}
+        \end{algorithm}
+    \end{minipage}\hfill
+    \begin{minipage}[t]{0.4\textwidth}
+        \begin{algorithm}[H]
+            \caption*{$\mathcal{O}^\pco(m, c)$}
+            \begin{algorithmic}[1]
+                \State \Return $\llbrack \decrypt(\sk, c) = m \rrbrack$
+            \end{algorithmic}
+        \end{algorithm}
+    \end{minipage}
+    \caption{Decryption oracle $\mathcal{O}^\decrypt$ (left) answers decryption queries by returning the decryption of the queried ciphertext. Plaintext-checking oracle $\mathcal{O}^\pco$ (right) answers whether the queried plaintext is the decryption of the queried ciphertext.}\label{fig:pke-oracles}
+\end{figure}
+
+In public-key cryptography, all adversaries are assumed to have access to the public key ($\text{ATK} = \text{CPA}$). If the adversary has access to a decryption oracle, it is said to mount chosen-ciphertext attack (ATK = CCA). If the adversary has access to a plaintext-checking oracle (PCO) , then it is said to mount plaintext-checking attack (ATK = PCA). See Figure \ref{fig:pke-oracles} for algorithmic description of the oracles.
 
 \begin{equation*}
     \text{ATK} = \begin{cases}
@@ -241,7 +266,7 @@ In public-key cryptography, all adversaries are assumed to have access to the pu
 
 $$
 P\left[
-    \decap(\sk, c) = K \mid (\pk, \sk) \leftarrow \keygen(1^\lambda); (c, K) \leftarrow \encap(\pk)
+    \decap(\sk, c) = K \mid (\pk, \sk) \leftsample \keygen(1^\lambda); (c, K) \leftsample \encap(\pk)
 \right] = 1
 $$
 
@@ -253,11 +278,11 @@ $$
         \begin{algorithm}[H]
             \caption*{KEM IND-ATK Game}
             \begin{algorithmic}[1]
-                \State $(\pk, \sk) \leftarrow \keygen((1^\lambda))$
-                \State $(c^\ast, K_0) \leftarrow \encap(\pk)$
-                \State $K_1 \leftarrow \mathcal{K}$
-                \State $b \leftarrow \{0,1\}$
-                \State $\hat{b} \leftarrow A^\texttt{ATK}(1^\lambda, \pk, c^\ast, K_b)$
+                \State $(\pk, \sk) \leftsample \keygen((1^\lambda))$
+                \State $(c^\ast, K_0) \leftsample \encap(\pk)$
+                \State $K_1 \leftsample \mathcal{K}$
+                \State $b \leftsample \{0,1\}$
+                \State $\hat{b} \leftsample A^\texttt{ATK}(1^\lambda, \pk, c^\ast, K_b)$
                 \State \Return $\llbrack \hat{b} = b \rrbrack$
             \end{algorithmic}
         \end{algorithm}
@@ -271,9 +296,9 @@ $$
 \texttt{Adv}^\texttt{IND-ATK}(A) = \left\vert P\left[
     A^\texttt{ATK}(1^\lambda, c^\ast, K_b) = b
     \mid \begin{aligned}
-    &(\pk, \sk) \leftarrow \keygen(1^\lambda); \\
-    &(c^\ast, K_0) \leftarrow \encap(\pk); \\
-    &K_1 \leftarrow \mathcal{K}; b \leftarrow \{0,1\}
+    &(\pk, \sk) \leftsample \keygen(1^\lambda); \\
+    &(c^\ast, K_0) \leftsample \encap(\pk); \\
+    &K_1 \leftsample \mathcal{K}; b \leftsample \{0,1\}
     \end{aligned}
 \right] - \frac{1}{2}
 \right\vert
@@ -282,7 +307,7 @@ $$
 By default, all adversaries are assumed to have the public key, with which they can mount chosen plaintext attacks (ATK = CPA). If the adversary as access to a decapsulation oracle $\mathcal{O}^\decap: c \mapsto \decap(\sk, c)$, it is said to mount a chosen-ciphertext attack (ATK = CCA).
 
 \subsection{Message authentication code (MAC)}\label{sec:message-authentication-code}
-\subsubsection{Syntax} A message authentication code (MAC) is a collection of two routines $(\sign, \verify)$ defined over some key space $\mathcal{K}$, some message space $\mathcal{M}$, and some tag space $\mathcal{T}$. The signing routine $\sign: (k, m) \mapsto t$ authenticates the message $m$ under the symmetric key $k$ by producing a tag $t$. The verification routine $\verify(k,m,t)$ outputs $1$ if the message-tag pair $(m, t)$ is authentic under the symmetric key $k$ and $0$ otherwise. Many MAC constructions are deterministic: for these constructions it is simpler to denote the signing routine by $t \leftarrow \mac(k, m)$, and verification done using a simple comparison. Some MAC constructions require a distinct or randomized nonce $r \leftarrow \mathcal{R}$, and the signing routine will take this additional argument $t \leftarrow \mac(k, m; r)$.
+\subsubsection{Syntax} A message authentication code (MAC) is a collection of two routines $(\sign, \verify)$ defined over some key space $\mathcal{K}$, some message space $\mathcal{M}$, and some tag space $\mathcal{T}$. The signing routine $\sign: (k, m) \mapsto t$ authenticates the message $m$ under the symmetric key $k$ by producing a tag $t$. The verification routine $\verify(k,m,t)$ outputs $1$ if the message-tag pair $(m, t)$ is authentic under the symmetric key $k$ and $0$ otherwise. Many MAC constructions are deterministic: for these constructions it is simpler to denote the signing routine by $t \leftarrow \mac(k, m)$, and verification done using a simple comparison. Some MAC constructions require a distinct or randomized nonce $r \leftsample \mathcal{R}$, and the signing routine will take this additional argument $t \leftarrow \mac(k, m; r)$.
 
 \subsubsection{Security} The standard security notion for a MAC is \textit{existential unforgeability under chosen message attack (EUF-CMA)}. We define it using an adversarial game in which an adversary has access to a signing oracle $\mathcal{O}^\sign: m \mapsto \sign(k, m)$ and tries to produce a valid message-tag pair that has not been queried from the signing oracle (Figure \ref{fig:euf-cma-game}).
 
@@ -292,8 +317,8 @@ By default, all adversaries are assumed to have the public key, with which they 
     \begin{algorithm}[H]
         \caption*{MAC EUF-CMA game}
         \begin{algorithmic}[1]
-            \State $k^\ast \leftarrow \mathcal{K}$
-            \State $(\hat{m}, \hat{t}) \leftarrow A^\texttt{CMA}()$
+            \State $k^\ast \leftsample \mathcal{K}$
+            \State $(\hat{m}, \hat{t}) \leftsample A^\texttt{CMA}()$
             \State \Return $\llbrack \verify(k^\ast, \hat{m}, \hat{t}) \land (\hat{m}, \hat{t}) \not\in \mathcal{O}^\sign \rrbrack$
         \end{algorithmic}
     \end{algorithm}
@@ -345,8 +370,8 @@ Let $\mathcal{B}^\ast$ denote the set of finite bit strings. Let $\mathcal{K}_\k
     \begin{algorithm}[H]
         \caption*{$\keygen_\etm()$}
         \begin{algorithmic}[1]
-            \State $(\pk,  \sk) \leftarrow \keygen_\pke()$
-            \State $s \leftarrow \mathcal{M}_\pke$
+            \State $(\pk,  \sk) \leftsample \keygen_\pke()$
+            \State $s \leftsample \mathcal{M}_\pke$
             \State $\sk \leftarrow (\sk, s)$
             \State \Return $(\pk, \sk)$
         \end{algorithmic}
@@ -356,9 +381,9 @@ Let $\mathcal{B}^\ast$ denote the set of finite bit strings. Let $\mathcal{K}_\k
     \begin{algorithm}[H]
         \caption*{$\encap_\etm(\pk)$}
         \begin{algorithmic}[1]
-            \State $m \leftarrow \mathcal{M}_\pke$
+            \State $m \leftsample \mathcal{M}_\pke$
             \State $k \leftarrow G(m)$
-            \State $c^\prime \leftarrow \encrypt_\pke(\pk, m)$
+            \State $c^\prime \leftsample \encrypt_\pke(\pk, m)$
             \State $t \leftarrow \mac(k, c^\prime)$
             \State $c \leftarrow (c^\prime, t)$
             \State $K \leftarrow H(m, c)$
@@ -790,14 +815,14 @@ Algorithms \ref{alg:mceliece-encap} and \ref{alg:mceliece-decap} describe Classi
     \end{algorithmic}
 \end{algorithm}
 
-We instantiated the encrypt-then-MAC KEM transformation using \\ \texttt{SeededKeyGen}, \texttt{FixedWeight}, \texttt{Encode}, and \texttt{Decode} as sub-routines. The result is called McEliece+. Its key generation routine is identical to the key generation of Classic McEliece. Its encapsulation derives a MAC key from the output of \texttt{FixedWeight} and signs the syndrome computed from \texttt{Encode}. In decapsulation, weight and syndrome check is replaced with re-deriving the MAC key and checking the tag.
+We instantiated the encrypt-then-MAC KEM transformation using \\ \texttt{SeededKeyGen}, \texttt{FixedWeight}, \texttt{Encode}, and \texttt{Decode} as subroutines. The result is called McElieceEtM. Its key generation routine is identical to the key generation of Classic McEliece. Its encapsulation derives a MAC key from the output of \texttt{FixedWeight} and signs the syndrome computed from \texttt{Encode}. In decapsulation, weight and syndrome check is replaced with re-deriving the MAC key and checking the tag.
 
 \begin{figure}[h]
     \centering
     
     \begin{minipage}[t]{0.48\textwidth}
         \begin{algorithm}[H]
-            \caption{$\encap_\text{McEliece+}(\pk)$}
+            \caption{$\encap_\text{McElieceEtM}(\pk)$}
             \begin{algorithmic}[1]
                 \Require Public key $\pk = T \in\mathbb{F}_2^{mt \times n}$
                 \State $\mathbf{e} \leftsample \texttt{FixedWeight}()$
@@ -811,7 +836,7 @@ We instantiated the encrypt-then-MAC KEM transformation using \\ \texttt{SeededK
     \end{minipage}\hfill
     \begin{minipage}[t]{0.48\textwidth}
         \begin{algorithm}[H]
-            \caption{$\decap_\text{McEliece+}(\sk, c)$}
+            \caption{$\decap_\text{McElieceEtM}(\sk, c)$}
             \begin{algorithmic}[1]
                 \Require Secret key $\sk = (\Gamma, s)$
                 \Require Ciphertext $c = (\mathbf{c}, t)$
@@ -827,11 +852,11 @@ We instantiated the encrypt-then-MAC KEM transformation using \\ \texttt{SeededK
         \end{algorithm}
     \end{minipage}
 
-    \caption{McEliece+: applying encrypt-then-MAC to the Niedereitter cryptosystem}\label{fig:mceliece-plus}
+    \caption{McElieceEtM: applying encrypt-then-MAC to the Niedereitter cryptosystem}\label{fig:mceliece-plus}
 \end{figure}
 
 \subsection{Choosing MAC}\label{sec:choosing-mac}
-For concrete instantiation of McEliece+, we chose four MACs covering a variety of architectures. All MACs are parameterized with a 256-bit key and 128-bit tag, except for KMAC-256, which can have variable key and tag length.
+For concrete instantiation of McElieceEtM, we chose four MACs covering a variety of architectures. All MACs are parameterized with a 256-bit key and 128-bit tag, except for KMAC-256, which can have variable key and tag length.
 
 \paragraph{Poly1305 \cite{bernstein2005poly1305} and GMAC \cite{NIST80038D}} are both Carter-Wegman style MACs \cite{DBLP:journals/jcss/CarterW79,DBLP:journals/jcss/WegmanC81}, which compute the tag using finite field arithmetic. It first parses the message into a sequence of finite field elements, then evalutes a polynomial whose coefficients are the message blocks and whose indeterminate is the secret key. Specifically, Poly1305 oerates in the prime field $\mathbb{F}_q$ where $q = 2^{130} - 5$. GMAC operates in the binary extension field $\mathbb{F}_{2^{128}}$.
 
@@ -844,9 +869,9 @@ In implementation, we used OpenSSL 3.3.1's \texttt{EVP\_MAC} interface. Within t
 % \subsubsection{Other MACs} TODO: Kali's part
 
 \subsection{Performance benchmark}
-We implemented McEliece+ by modifying the reference implementation. MAC implementations are taken from OpenSSL. C code is compiled using Apple Clang 15.0.0. Performance measurement is run on Apple Silicon M1 chip. CPU clock is measured using kernel clock \texttt{mach\_absolute\_time}. Each rouine is run 10000 times, with median time reported in Table \ref{tbl:mceliece-plus-performance}.
+The subroutines \texttt{SeededKeyGen}, \texttt{FixedWeight}, \texttt{Encode}, and \texttt{Decode} were taken from the \texttt{vec} implementation submitted to the fourth round of NIST PQC standardization project\footnote{\url{https://csrc.nist.gov/csrc/media/Projects/post-quantum-cryptography/documents/round-4/submissions/mceliece-Round4.tar.gz}}. MAC implementations are taken from OpenSSL 3.5.0. C code is compiled using Apple Clang 15.0.0. Performance measurement is run on Apple Silicon M1 chip. CPU clock is measured using \texttt{mach\_absolute\_time}. Each routine is run 10000 times, with median times reported in Table \ref{tbl:mceliece-plus-performance}.
 
-\begin{table}[h]
+\begin{table}[hp]
     \centering
     % \footnotesize
     \begin{tabular}[c]{|c|c|c|c|}
@@ -924,7 +949,7 @@ We implemented McEliece+ by modifying the reference implementation. MAC implemen
         \texttt{mceliece8192128 + kmac256} & 957 (+11.54\%) & 6574 (-11.92\%) & 7531 (-9.50\%) \\
         \hline
     \end{tabular}\vspace{1em}
-    \caption{McEliece+ achieves 9-12\% speedup in combined ``encapsulate + decapsulate'' compared to Classic McEliece}\label{tbl:mceliece-plus-performance}
+    \caption{McElieceEtM achieves 9-12\% speedup in combined ``encapsulate + decapsulate'' compared to Classic McEliece}\label{tbl:mceliece-plus-performance}
 \end{table}
 
 \section{Application to ElGamal}\label{sec:application-to-elgamal}
@@ -1098,7 +1123,7 @@ We now present the proof for Lemma \ref{lemma:elgamal-is-ow-pca}.
 
 % TODO: mention how applying encrypt-then-MAC to Kyber can be used in ephemeral key exchange and will still have performance savings, include performance numbers in appendix
 \section{Conclusion and future works}\label{sec:conclusion}
-In this paper we presented ``encrypt-then-MAC'', a KEM constructed from a PKE and a MAC. We reduced the IND-CCA security of the KEM tightly to the OW-PCA security of the underlying PKE and non-tightly to the security of the underlying MAC. We also analyzed generic attacks on the KEM and proposed countermeasures. We then applie the encrypt-then-MAC transformation to the ElGamal cryptosystem and the McEliece cryptosystem, and implemented the transformed McEliece+ in C using a variety of MACs. On average, McEliece+ achieved 9-12\% increase in throughput compared to Classic McEliece, which uses the Fujisaki-Okamoto transformation to convert OW-CPA encryption scheme into a CCA secure KEM.
+In this paper we presented ``encrypt-then-MAC'', a KEM constructed from a PKE and a MAC. We reduced the IND-CCA security of the KEM tightly to the OW-PCA security of the underlying PKE and non-tightly to the security of the underlying MAC. We also analyzed generic attacks on the KEM and proposed countermeasures. We then applie the encrypt-then-MAC transformation to the ElGamal cryptosystem and the McEliece cryptosystem, and implemented the transformed McElieceEtM in C using a variety of MACs. On average, McElieceEtM achieved 9-12\% increase in throughput compared to Classic McEliece, which uses the Fujisaki-Okamoto transformation to convert OW-CPA encryption scheme into a CCA secure KEM.
 
 We speculate that because Shor's algorithm \cite{DBLP:conf/focs/Shor94,DBLP:journals/siamcomp/Shor97} is inapplicable to most MAC constructions, the encrypt-then-MAC KEM transformation can be applied to a quantum-resistant PKE scheme to derive a post-quantum CCA-secure KEM scheme. In future works, we plan to analyze the security reduction under the quantum random oracle model, which can inform us of the appropriate parameters for the MAC.
 
